# Epitech-Projects

./: .gitignore  README.md
tek1/B1/CPE/BSQ/: bsq
tek1/B1/CPE/BSQ/src/: main.c
tek1/B1/CPE/CPOOL/D03/: my_isneg.c  my_print_comb.c  my_print_digits.c  my_print_revalpha.c  my_put_nbr.c
tek1/B1/CPE/CPOOL/D05/: my_compute_power_rec.c
tek1/B1/CPE/CPOOL/D06/: my_str_isprintable.c
tek1/B1/CPE/CPOOL/finalstumper/: rush3.c
tek1/B1/CPE/CPOOL/firtree/: tree.c
tek1/B1/CPE/CPOOL/nmatch/: match.c
tek1/B1/FRE/B1Rush/: B1-RUSH-doc-principal-constant.vignero@epitech.eu.docx  B1-RUSH-roman-constant.vigneron@epitech.eu.pptx
tek1/B1/MAT/101pong/src/: main.c
tek1/B1/MUL/myHunter/: my_hunter
tek1/B1/PSU/minishell1/src/: do_others.c  helpers.c  main.c  start_loop.c
tek1/B1/PSU/myprintf/sources/: check_params.c  my_printf.c  my_put_error.c
tek1/B2/CPE/dante/generator/: print.c
tek1/B2/MAT/106bombyx/: 106bombyx
tek1/B2/MAT/108trigo/: Makefile
tek1/B2/MAT/108trigo/src/: main.c
tek1/B2/MAT/110borwein/src/: main.c
tek1/B2/PSU/mySokoban/src/: helper.c  helper_map.c  initialize.c
tek1/B2/SYN/automakefile/: .gitignore  automakefile  skip-synthesis.sh
tek1/B2/SYN/palindrome/include/: pal.h
tek1/B2/SYN/palindrome/tests/: test_helpers.c
tek2/B3/EPI/projectweek/: Accroche.txt
tek2/B3/PDG/d01/: My.hs
tek2/B3/PDG/d02/: DoOp.hs  Makefile  My.hs
tek2/B3/PDG/d03/: Game.hs  Tree.hs  push.sh
tek2/B3/PDG/d04am/ex00/: Makefile  z.c
tek2/B3/PDG/d04am/ex01/: Makefile  mul_div.c
tek2/B3/PDG/d04am/ex02/: Makefile  concat.c
tek2/B3/PDG/d04am/ex03/: array_1d_to_2d.c  concat.h
tek2/B3/PDG/d04am/ex04/: print.c  print.h
tek2/B3/PDG/d04pm/: access_int_list.c  access_list.c  delete_int_list.c  delete_list.c  infos_int_list.c  infos_list.c  infos_queue.c  infos_stack.c  insert_int_list.c  insert_list.c  insert_stack.c  int_list.h  list.h  modify_queue.c  queue.h
tek2/B3/PDG/d05/: Makefile  append.c  assign.c  at.c  clear.c  compare.c  contain.c  copy.c  empty.c  find.c  init_and_destroy.c  insert.c  length.c  string.h  to_int.c
tek2/B3/PDG/d05/tests/: Makefile  test_lib_strings.c
tek2/B3/PDG/d06/ex00/: Makefile
tek2/B3/PDG/d06/ex01/: Makefile
tek2/B3/PDG/d06/hospital/: Hospital.cpp  Hospital.hpp  KoalaDoctor.cpp  KoalaDoctor.hpp  KoalaDoctorList.cpp  KoalaDoctorList.hpp  KoalaNurse.cpp  KoalaNurse.hpp  (+6 more)
tek2/B3/PDG/d07am/: Admiral.cpp  Admiral.hpp  Borg.cpp  Borg.hpp  BorgQueen.cpp  BorgQueen.hpp  Federation.cpp  Federation.hpp  WarpSystem.cpp  WarpSystem.hpp
tek2/B3/PDG/d09/: Enchanter.cpp  Enchanter.hpp  ICharacter.hpp  Knight.cpp  Knight.hpp  Makefile  Paladin.cpp  Paladin.hpp  Peasant.cpp  Peasant.hpp  Priest.cpp  Priest.hpp
tek2/B3/PDG/d11/: Makefile
tek2/B3/PDG/d12/: Algorithm.hpp  Array.hpp  Command.cpp  Command.hpp  SharedPointer.hpp  Stack.cpp  Stack.hpp  UniquePointer.hpp
tek2/B4/CNA/groundhog/: .gitignore  tests.py
tek2/B4/CNA/trade/: trade.py
tek2/B4/DOP/octopus/: inventory
tek2/B4/OOP/arcade/: .gitignore  .gitmodules  Makefile  README.md  formatForMac.sh  verify_doc.sh
tek2/B4/OOP/arcade/src/: CMakeLists.txt
tek2/B4/OOP/arcade/tests/: CMakeLists.txt  test_basic.cpp
tek2/B4/OOP/tekspice/: .gitignore  CMakeLists.txt
tek2/B4/OOP/tekspice/sources/: main.cpp
tek2/B4/OOP/tekspice/sources/Circuit/: Circuit.cpp  Circuit.hpp
tek2/B4/OOP/tekspice/sources/Component/: AComponent.cpp  AComponent.hpp  ComponentList.hpp  IComponent.hpp
tek2/B4/OOP/tekspice/sources/Component/Base/: Clock.cpp  Clock.hpp  Electrical.cpp  Electrical.hpp  FalsePin.cpp  FalsePin.hpp  Input.cpp  Input.hpp  Output.cpp  Output.hpp  TruePin.cpp  TruePin.hpp
tek2/B4/OOP/tekspice/sources/Component/Gates/: AndGates.cpp  AndGates.hpp  InverterGates.cpp  InverterGates.hpp  NandGates.cpp  NandGates.hpp  NorGates.cpp  NorGates.hpp  OrGates.cpp  OrGates.hpp  XorGates.cpp  XorGates.hpp
tek2/B4/OOP/tekspice/sources/Component/Specific/: component4001.cpp  component4001.hpp  component4011.cpp  component4011.hpp  component4030.cpp  component4030.hpp  component4069.cpp  component4069.hpp  component4071.cpp  component4071.hpp  component4081.cpp  component4081.hpp
tek2/B4/OOP/tekspice/sources/Factory/: Factory.cpp  Factory.hpp
tek2/B4/OOP/tekspice/sources/Loop/: Loop.cpp  Loop.hpp
tek2/B4/OOP/tekspice/sources/Parser/: AParser.cpp  AParser.hpp  IParser.hpp  NTSParser.cpp  NTSParser.hpp
tek2/B4/OOP/tekspice/sources/Parser/Error/: NTSError.hpp  ParserError.hpp
tek3/B5/DOP/bernstein/: cadvisor.daemonset.yaml  delete_all.sh  poll.deployment.yaml  poll.ingress.yaml  poll.service.yaml  postgres.configmap.yaml  postgres.deployment.yaml  postgres.secret.yaml  postgres.volume.yaml  redis.service.yaml  result.deployment.yaml  result.ingress.yaml  result.service.yaml  run_all.sh  traefik.deployment.yaml  traefik.rbac.yaml  traefik.service.yaml  worker.deployment.yaml
tek3/B5/MAT/301dannon/: .gitignore  invalid_file  process.py  tests.py
tek3/B5/MAT/306radiator/: .gitignore  Makefile  main.py  process.py
tek3/B5/MAT/307multigrains/: .gitignore  Makefile  main.py  process.py
tek3/B5/MAT/308reedpipes/: .gitignore  Makefile  main.py  process.py
tek3/B5/MAT/309pollution/: .gitignore  Makefile  main.py  process.py
(+166 files in other folders)
